import {
  Ctx,
  Hears,
  InjectBot,
  On,
  Sender,
  Start,
  Update,
} from 'nestjs-telegraf';
import { Context, Markup, Telegraf } from 'telegraf';
import { OpenAiService } from '../../openai/services/openai.service';
import {
  InternalServerErrorException,
  UseFilters,
  UseGuards,
} from '@nestjs/common';
import * as ffmpeg from 'fluent-ffmpeg';
import { join } from 'path';
import * as fs from 'fs';
import { catchError, Observable, of, Subject, switchMap } from 'rxjs';
import { UserService } from '../../users/services/user.service';
import { BotsGuard } from '../../common/guards/bots.guard';
import { TelegrafExceptionFilter } from '../../common/filters/telegraf.exception.filter';
import { UserHasLimitGuard } from '../../common/guards/user.has.limit.guard';
import { Utils } from '../../common/utils';
import { PaymentService } from '../../payment/services/payment.service';
import { PaymentResponseInterface } from '../../payment/interfaces/payment.response.interface';
import { User } from '../../proto/build/user.pb';

@Update()
@UseGuards(BotsGuard)
@UseFilters(TelegrafExceptionFilter)
export class BotHandler {
  constructor(
    @InjectBot() private readonly bot: Telegraf,
    private readonly openAiService: OpenAiService,
    private readonly userService: UserService,
    private readonly paymentService: PaymentService,
  ) {}

  @Start()
  public async start(
    @Ctx() ctx,
    @Sender('username') username: string,
    @Sender('first_name') firstName: string,
  ): Promise<void> {
    const template =
      `–ü—Ä–∏–≤–µ—Ç, ${username ?? firstName.trim()}! üòÉ` +
      '\n' +
      ' –Ø —Ç–≤–æ–π —É–Ω–∏–≤–µ—Ä—Å–∞–ª—å–Ω—ã–π –ø–æ–º–æ—â–Ω–∏–∫ –Ω–∞ –æ—Å–Ω–æ–≤–µ ChatGPT üåü\n' +
      '\n' +
      ' –°–ø—Ä–æ—Å–∏ –º–µ–Ω—è –æ —á–µ–º —Ö–æ—á–µ—à—å, —è –∑–Ω–∞—é –≤—Å–µ, –Ω–∞–ø—Ä–∏–º–µ—Ä:\n' +
      '\n' +
      'üó£ –†–∞—Å—Å–∫–∞–∂–∏ –∞–Ω–µ–∫–¥–æ—Ç –∏–ª–∏ –∏—Å—Ç–æ—Ä–∏—é\n' +
      'üìù –ü–æ–º–æ–≥–∏ –≤ —Ä–µ—à–µ–Ω–∏–∏ –¥–æ–º–∞—à–Ω–µ–≥–æ –∑–∞–¥–∞–Ω–∏—è\n' +
      'üç≤ –°–ø–ª–∞–Ω–∏—Ä—É–π –º–Ω–µ —Ä–∞—Ü–∏–æ–Ω –¥–ª—è –ø–æ—Ö—É–¥–µ–Ω–∏—è\n' +
      'üöó –ü—Ä–µ–¥–ª–æ–∂–∏ –∫–ª–∞—Å—Å–Ω—ã–π –º–∞—Ä—à—Ä—É—Ç –¥–ª—è –ø—É—Ç–µ—à–µ—Å—Ç–≤–∏—è\n' +
      '\n' +
      ' –ò –º–Ω–æ–≥–æ–µ –¥—Ä—É–≥–æ–µ. –ü–æ–µ—Ö–∞–ª–∏ üòâ';

    await ctx.reply(template, {
      parse_mode: 'HTML',
      ...Markup.keyboard([['–ü–æ–¥–ø–∏—Å–∫–∞'], ['–ü–æ–¥–¥–µ—Ä–∂–∫–∞']]),
    });
  }

  @Hears(['–ü–æ–¥–ø–∏—Å–∫–∞'])
  public sendSubs(@Ctx() ctx: Context) {
    return this.userService
      .getUser({
        extId: ctx.from.id,
        userName: ctx.from.username,
        name: ctx.from.first_name,
      })
      .pipe(
        switchMap((user: User) => {
          if (
            !user.subscriptionDate ||
            new Date(parseInt(user.subscriptionDate)) < new Date()
          ) {
            return of(
              ctx.reply(
                `–ö–æ–ª–∏—á–µ—Å—Ç–≤–æ –∑–∞–ø—Ä–æ—Å–æ–≤ –∫–æ –º–Ω–µ: ${user.freeRequests}\n–î–ª—è –±–µ–∑–≥—Ä–∞–Ω–∏—á–Ω–æ–≥–æ –æ–±—â–µ–Ω–∏—è —Å–æ –º–Ω–æ–π, –ø–æ–∂–∞–ª—É–π—Å—Ç–∞, –æ—Ñ–æ—Ä–º–∏ –ø–æ–¥–ø–∏—Å–∫—É üëç`,
                this.userService.getSubscriptionKeyboard(),
              ),
            );
          }
          return of(
            ctx.reply(
              `–ö–æ–ª–∏—á–µ—Å—Ç–≤–æ –∑–∞–ø—Ä–æ—Å–æ–≤ –∫–æ –º–Ω–µ: –±–µ–∑ –æ–≥—Ä–∞–Ω–∏—á–µ–Ω–∏–π\n–î–∞—Ç–∞ –æ–∫–æ–Ω—á–∞–Ω–∏—è: ${new Date(
                parseInt(user.subscriptionDate),
              )}`,
              this.userService.getSubscriptionKeyboard(),
            ),
          );
        }),
      );
  }

  @Hears(['–ù–µ–¥–µ–ª—è - 169 —Ä—É–±', '–ú–µ—Å—è—Ü - 359 —Ä—É–±'])
  public activateSubs(
    @Ctx() ctx: Context,
    @Sender('id') extId: number,
    @Sender('username') userName: string,
    @Sender('first_name') name: string,
  ) {
    this.paymentService
      .createPayment({
        amount: {
          value: '169',
          currency: 'RUB',
        },
        metadata: {
          user_id: extId,
          date: Utils.dateWithOffsetDays(7).getTime(),
          name: name,
          userName: userName ?? '',
        },
      })
      .pipe(
        catchError((err: Record<string, any>) => {
          console.error(err.response.data.description);
          return of();
        }),
      )
      .subscribe((res: PaymentResponseInterface) => {
        this.paymentService.checkForStatusUpdate(res.id);
        ctx.reply(
          `–ü–æ–∂–∞–ª—É–π—Å—Ç–∞, –ø–µ—Ä–µ–π–¥–∏—Ç–µ –ø–æ —Å—Å—ã–ª–∫–µ:\n${res.confirmation.confirmation_url}`,
          {
            parse_mode: 'HTML',
          },
        );
      });
  }

  @On('sticker')
  public async on(@Ctx() ctx): Promise<void> {
    await ctx.reply('üëç');
  }

  @On('text')
  @UseGuards(UserHasLimitGuard)
  public async onMessage(@Ctx() ctx: Context): Promise<void> {
    const { from } = ctx;
    await ctx.sendChatAction('typing');
    return this.openAiService
      .makeChatRequest(ctx.message['text'])
      .then((res) => {
        this.userService.removeFreeRequest(ctx.from.id).subscribe();
        ctx.reply(res.data.choices[0].message.content);
      });
  }

  @On('voice')
  @UseGuards(UserHasLimitGuard)
  public async onVoice(@Ctx() ctx): Promise<void> {
    try {
      ctx.sendChatAction('typing');
      const file = await ctx.telegram.getFileLink(ctx.message.voice.file_id);
      this.transcryptAudio(file.href, ctx.message.from.id).subscribe(
        async (res: string): Promise<void> => {
          const response = await this.openAiService.makeChatRequest(res);
          this.userService.removeFreeRequest(ctx.from.id).subscribe();
          ctx.reply(response.data.choices[0].message.content);
        },
      );
    } catch (e) {
      console.error(e);
      ctx.reply('–ò–∑–≤–∏–Ω–∏—Ç–µ, —á—Ç–æ-—Ç–æ —Å–ª–æ–º–∞–ª–æ—Å—å');
    }
  }

  private transcryptAudio(url: string, name: string): Observable<string> {
    const tempName: string = name + '_' + new Date().getMilliseconds() + '.mp3';
    const file: Subject<string> = new Subject<string>();
    try {
      ffmpeg()
        .input(url)
        .toFormat('mp3')
        .on('error', (error) => console.log(`Encoding Error: ${error.message}`))
        .on('exit', () => console.log('Audio recorder exited'))
        .on('close', () => console.log('Audio recorder closed'))
        .on('end', () => {
          this.openAiService
            .transcribe(join('temp', tempName))
            .then((res): void => {
              file.next(res);
              fs.unlinkSync(join('temp', tempName));
            });
        })
        .pipe(fs.createWriteStream(join('temp', tempName)));
      return file;
    } catch (e) {
      throw new InternalServerErrorException(`${e}`);
    }
  }
}
